[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xtquant-rpyc"
version = "1.0.0"
description = "Transparent remote proxy for xtquant library - use xtquant on macOS/Linux via Windows server"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
authors = [
    {name = "Jason Hu", email = "63170682@qq.com"}
]
keywords = [
    "xtquant",
    "rpyc", 
    "remote",
    "proxy",
    "quant",
    "stock",
    "trading",
    "qmt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
dependencies = [
    "rpyc>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.scripts]
xtdata = "xtquant_rpyc.tools.xtdata:main"
xttrader = "xtquant_rpyc.tools.xttrader:main"

[project.urls]
Homepage = "https://gitee.com/jdragonhu/xtquant-rpyc"
Documentation = "https://gitee.com/jdragonhu/xtquant-rpyc#readme"
Repository = "https://gitee.com/jdragonhu/xtquant-rpyc"
Issues = "https://gitee.com/jdragonhu/xtquant-rpyc/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["xtquant_rpyc*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]